--- a/styles/main.css
+++ b/styles/main.css
@@ -50,6 +50,11 @@
   font-family: Lato, Arial, Helvetica, sans-serif;
 }
 
+.border-orange {
+  border: 2px solid #ec5342;
+  width: 4rem;
+}
+
 /* =====  End of GLOBAL SETTINGS RESET  ====== */
 
 /* =============================================
@@ -95,7 +100,6 @@
 }
 
 .description-section {
-  border: 2px solid white;
   background-color: #f7f7f7;
   border: 5px solid #d3d3d3;
 }
@@ -106,6 +110,24 @@
 }
 
 /* =====  End of TITLE SECTION  ====== */
+
+/* =============================================
+=            MAIN PROGRAM SECTION            =
+============================================= */
+
+.bg-medium-opacity {
+  background-color: rgb(145, 145, 145, 0.2);
+}
+
+.titles-program {
+  font-weight: 700;
+}
+
+.btn-program {
+  font-size: 1.5rem;
+}
+
+/* =====  End of MAIN PROGRAM SECTION  ====== */
 
 @media (min-width: 768px) {
   .navbar-1,
