added style to partner section on mobile version

--- a/styles/main.css
+++ b/styles/main.css
@@ -55,6 +55,10 @@
   width: 4rem;
 }
 
+.smaller-none {
+  display: none;
+}
+
 /* =====  End of GLOBAL SETTINGS RESET  ====== */
 
 /* =============================================
