added style to main program section in desktop version

--- a/styles/main.css
+++ b/styles/main.css
@@ -181,4 +181,10 @@
     display: inherit;
     visibility: initial;
   }
+
+  .title-span {
+    font-size: 5rem;
+    line-height: 5rem;
+    max-width: 80%;
+  }
 }
