added html structure of about page

--- a/styles/main.css
+++ b/styles/main.css
@@ -158,6 +158,32 @@
 /* =====  End of SPEAKERS SECTION  ====== */
 
 
+/* =============================================
+=            PARTNER SECTION            =
+============================================= */
+
+.partner-img {
+  max-width: 140px;
+}
+
+/* =====  End of PARTNER SECTION  ====== */
+
+
+/* =============================================
+=            FOOTER            =
+============================================= */
+
+.logo-footer {
+  width: 100px;
+  height: 81px;
+}
+
+/* =====  End of FOOTER  ====== */
+
+/* =============================================
+=            MEDIA QUERIES            =
+============================================= */
+
 @media (min-width: 768px) {
   .navbar-1,
   .navbar-2 {
@@ -188,3 +214,5 @@
     max-width: 80%;
   }
 }
+
+/* =====  End of MEDIA QUERIES  ====== */
