added basic elements of tickets html page

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,11 +11,11 @@
 }
 
 .c-black {
-  color: #272A31;
+  color: #272a31;
 }
 
 .c-orange {
-  color: #EC5242;
+  color: #ec5242;
 }
 
 .c-gray {
@@ -27,11 +27,11 @@
 }
 
 .bg-black {
-  background-color: #272A31;
+  background-color: #272a31;
 }
 
 .bg-orange {
-  background-color: #EC5242;
+  background-color: #ec5242;
 }
 
 .bg-gray {
@@ -157,7 +157,6 @@
 
 /* =====  End of SPEAKERS SECTION  ====== */
 
-
 /* =============================================
 =            PARTNER SECTION            =
 ============================================= */
@@ -167,7 +166,6 @@
 }
 
 /* =====  End of PARTNER SECTION  ====== */
-
 
 /* =============================================
 =            FOOTER            =
