added select lunch section and style for all version

--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -181,9 +181,9 @@
     visibility: initial;
   }
 
-  .smaller-none {
-    display: inherit;
-    visibility: initial;
+  .medium-show {
+    display: initial !important;
+    visibility: initial !important;
   }
 
   .medium-hide {
