--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -1,68 +1,5 @@
 
 /* =============================================
-=            GLOBAL SETTINGS RESET            =
-============================================= */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
-
-.c-black {
-  color: #272a31;
-}
-
-.c-orange {
-  color: #ec5242;
-}
-
-.c-gray {
-  color: #d3d3d3;
-}
-
-.c-white {
-  color: white;
-}
-
-.bg-black {
-  background-color: #272a31;
-}
-
-.bg-orange {
-  background-color: #ec5242;
-}
-
-.bg-gray {
-  background-color: #d3d3d3;
-}
-
-.bg-gray-medium {
-  background-color: #3e3e3e;
-}
-
-.font-f-1 {
-  font-family: 'Cocogoose Pro Trial', Arial, Helvetica, sans-serif;
-}
-
-.font-f-2 {
-  font-family: Lato, Arial, Helvetica, sans-serif;
-}
-
-.border-orange {
-  border: 2px solid #ec5342;
-  width: 4rem;
-}
-
-.smaller-none {
-  display: none;
-  visibility: hidden;
-}
-
-/* =====  End of GLOBAL SETTINGS RESET  ====== */
-
-/* =============================================
 =            HEADER SECTION            =
 ============================================= */
 
@@ -143,10 +80,6 @@
 =            TICKETS SECTION            =
 ============================================= */
 
-/* #desktop-form {
-  max-width: 50%;
-} */
-
 /* =====  End of TICKETS SECTION  ====== */
 
 /* =============================================
@@ -198,7 +131,8 @@
   }
 
   .navbar-1,
-  .navbar-2 {
+  .navbar-2,
+  .smaller-none {
     display: inherit;
     visibility: inherit;
   }
@@ -207,11 +141,6 @@
     font-size: 5rem;
     line-height: 5rem;
     max-width: 80%;
-  }
-
-  .smaller-none {
-    display: inherit;
-    visibility: initial;
   }
 }
 
