updated README file

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,11 +51,11 @@
 }
 
 .font-f-1 {
-  font-family: cocogooseregular, Arial, Helvetica, sans-serif;
+  font-family: 'cocogooseregular', Arial, Helvetica, sans-serif;
 }
 
 .font-f-2 {
-  font-family: Lato, Arial, Helvetica, sans-serif;
+  font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
 
 .border-orange {
